<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black">

    <ImageView
        android:id="@+id/iv_reservation"
        android:layout_width="273dp"
        android:layout_height="266dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/reservation" />

    <TextView
        android:id="@+id/tv_appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/tv_appTitle"
        android:textColor="@color/white"
        android:textSize="34sp" />

    <Spinner
        android:id="@+id/spn_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tv_nbPlaceRestant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_reserver"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_reserver"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_afficher_reservation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/btn_afficher_reservation"
        android:textSize="16sp" />

</LinearLayout>